# fhe

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/.github/workflows/: build.yml
core/src/: discrete_gaussian_generator.rs  discrete_gaussian_generator_generic.rs  element.rs  element_params.rs  lib.rs  poly_interface.rs  types.rs
core/src/math/: README_RU.MD  binary_uniform_generator.rs  binary_uniform_generator_impl.rs  discrete_gaussian_generator_generic.rs  discrete_uniform_generator_impl.rs  mod.rs
examples/: advanced_real_numbers.rs
src/: errors.rs  fhe_schemes.rs  gf_context.rs  gf_element.rs  lib.rs  parameters.rs  ring_context.rs  ring_element.rs  scale_technique.rs  serializable.rs
src/core/: mod.rs
src/core/examples/: parallel.rs  sampling.rs
src/core/extras/: dft.rs  math.rs  ntt1.rs  ntt2.rs
src/core/lattice/: constants_lattice.rs  dg_sampling.rs  dg_sampling_impl.rs  field2n.rs  field2n_impl.rs  il_element.rs  lat_hal.rs  matrix_lattice_impl.rs  mod.rs  std_lattice_params.rs  trap_door.rs  trap_door_impl.rs  trap_door_parameters.rs
src/core/math/: binaryuniformgenerator.rs  binaryuniformgenerator_impl.rs  chebyshev.rs  dftransform.rs  discretegaussiangenerator.rs  discretegaussiangenerator_impl.rs  discretegaussiangeneratorgeneric.rs  discreteuniformgenerator.rs  discreteuniformgenerator_impl.rs  distrgen.rs  distributiongenerator.rs  math_hal.rs  matrix_impl.rs
src/pke/: constants.rs  cryptocontext.rs  gen_cryptocontext.rs  mod.rs
src/pke/key/: eval_key.rs  eval_key_relin.rs  key.rs  (+4 more)
src/vanilla_variant/: mod.rs
(+59 files in other folders)
