
[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ndarray = "0.13.0"
ndarray-linalg = { version = "0.12.1", features = ["intel-mkl"] }
num = "0.3.1"
rand = "0.8.3"